--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -47,7 +47,7 @@
           <td class="border px-4 py-2">
             <%= link_to 'Show', professional, class: "text-blue-500 hover:text-blue-700" %>
             <%= link_to 'Edit', edit_professional_path(professional), class: "text-yellow-500 hover:text-yellow-700" %>
-            <%= link_to 'Destroy', professional, method: :delete, data: { confirm: 'Are you sure?' }, class: "text-red-500 hover:text-red-700" %>
+            <%= link_to 'Destroy', confirm_destroy_professional_path(professional), class: "red-button p-2 rounded-md" %>
           </td>
         </tr>
       <% end %>
