--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,8 @@
 
 <header id="header" class="text-white p-4 flex justify-between items-center sticky top-0 left-0 w-full z-10 bg-transparent transition-all duration-300 overflow-hidden max-w-full">
   <div class="text-xl font-bold flex items-center">
-    <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
-    <h1 class="text-2xl truncate">Physicians and Mentors (Test Build)(Admin View)</h1>
+    <%= link_to image_tag("/images/logo-1.png", alt: "Physicians and Mentors Logo", class: "w-16 h-16 mr-4"), home_path %>
+    <%= link_to "Physicians and Mentors (Test Build)(Admin View)", home_path, class: "text-3xl" %>
   </div>
 
   <div class="flex justify-center text-white flex-wrap gap-2">
@@ -21,8 +21,8 @@
 
   <header id="header" class="text-white p-4 flex justify-between items-center sticky top-0 left-0 w-full z-10 bg-transparent transition-all duration-300">
     <div class="text-xl font-bold flex items-center">
-      <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
-      <h1 class="text-3xl">Physicians and Mentors (Test Build)(Professional View)</h1>
+      <%= link_to image_tag("/images/logo-1.png", alt: "Physicians and Mentors Logo", class: "w-16 h-16 mr-4"), home_path %>
+      <%= link_to "Physicians and Mentors (Test Build)(Professional View)", home_path, class: "text-3xl" %>
     </div>
 
     <div class="flex justify-center text-white">
@@ -36,8 +36,8 @@
 
   <header id="header" class="text-white p-4 flex justify-between items-center sticky top-0 left-0 w-full z-10 bg-transparent transition-all duration-300">
     <div class="text-xl font-bold flex items-center">
-      <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
-      <h1 class="text-3xl">Physicians and Mentors (User View)</h1>
+      <%= link_to image_tag("/images/logo-1.png", alt: "Physicians and Mentors Logo", class: "w-16 h-16 mr-4"), home_path %>
+      <%= link_to "Physicans and Mentors (User View)", home_path, class: "text-3xl" %>
     </div>
 
     <div class="flex justify-center text-white">
@@ -52,8 +52,8 @@
 
   <header id="header" class="text-white p-4 flex justify-between items-center sticky top-0 left-0 w-full z-10 bg-transparent transition-all duration-300">
     <div class="text-xl font-bold flex items-center">
-    <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
-      <h1 class="text-3xl">Physicians and Mentors (Test Build)</h1>
+      <%= link_to image_tag("/images/logo-1.png", alt: "Physicians and Mentors Logo", class: "w-16 h-16 mr-4"), home_path %>
+      <%= link_to "Physicians and Mentors (Test Build)", home_path, class: "text-3xl" %>
     </div>
 
     <nav>
